# Twelve-API-Cashregister

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/products/: getproducts.rs  mod.rs
