[package]
name = "twelve-cash-register"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["rustls-tls", "json"] }
serde = "1.0.186"
serde_derive = "1.0.186"
sha256 = "1.3.0"
tokio = { version = "1.29.1", features = ["full"] }
